turtleart.polygon7.Polygon7.scala.error
Compilation error:
Polygon7:5: error: ')' expected but '}' found.
  }
  ^